apps/leaven-multi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: leaven-multi
  namespace: haenu
  labels:
    app: leaven-multi
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: leaven-multi
