apps/leaven-multi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: leaven-multi-ingress
  namespace: haenu
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: multi.leaven.team
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: leaven-multi
            port:
              number: 80
